--- a/travel.ipynb
+++ b/travel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,7 @@
        "      <th>COUNTRY</th>\n",
        "      <th>VISITED</th>\n",
        "      <th>CODE</th>\n",
+       "      <th>INFO</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -65,45 +66,50 @@
        "      <td>Afghanistan</td>\n",
        "      <td>0</td>\n",
        "      <td>AFG</td>\n",
+       "      <td>Afghanistan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Albania</td>\n",
        "      <td>0</td>\n",
        "      <td>ALB</td>\n",
+       "      <td>Albania</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Algeria</td>\n",
        "      <td>0</td>\n",
        "      <td>DZA</td>\n",
+       "      <td>Algeria</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>American Samoa</td>\n",
        "      <td>0</td>\n",
        "      <td>ASM</td>\n",
+       "      <td>American Samoa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Andorra</td>\n",
        "      <td>0</td>\n",
        "      <td>AND</td>\n",
+       "      <td>Andorra</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          COUNTRY  VISITED CODE\n",
-       "0     Afghanistan        0  AFG\n",
-       "1         Albania        0  ALB\n",
-       "2         Algeria        0  DZA\n",
-       "3  American Samoa        0  ASM\n",
-       "4         Andorra        0  AND"
+       "          COUNTRY  VISITED CODE            INFO\n",
+       "0     Afghanistan        0  AFG     Afghanistan\n",
+       "1         Albania        0  ALB         Albania\n",
+       "2         Algeria        0  DZA         Algeria\n",
+       "3  American Samoa        0  ASM  American Samoa\n",
+       "4         Andorra        0  AND         Andorra"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +132,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,13 +141,15 @@
     "data = [go.Choropleth(\n",
     "    locations = df['CODE'],\n",
     "    z = df['VISITED'],\n",
-    "    text = df['COUNTRY'],\n",
+    "    text = df['INFO'],\n",
+    "    hoverinfo = 'text',\n",
     "    colorscale = [\n",
     "        [0, \"rgb(143, 94, 153)\"],\n",
     "        [1, \"rgb(220, 220, 220)\"]\n",
     "    ],\n",
     "    showscale = False,\n",
     "    reversescale = True,\n",
+    "\n",
     "    marker = go.choropleth.Marker(\n",
     "        line = go.choropleth.marker.Line(\n",
     "            color = 'rgb(180,180,180)',\n",
@@ -150,6 +158,9 @@
     ")]\n",
     "\n",
     "layout = go.Layout(\n",
+    "    title = go.layout.Title(\n",
+    "        text = 'Visited Countries Map'\n",
+    "    ),\n",
     "    geo = go.layout.Geo(\n",
     "        showframe = False,\n",
     "        showcoastlines = False,\n",
@@ -162,6 +173,13 @@
     "fig = go.Figure(data = data, layout = layout)\n",
     "py.iplot(fig, filename = 'd3-world-map')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
